--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,35 +1,10 @@
 pipeline {
     agent any
 	tools {
-		maven 'mvn3'
-	}
-
-
-    stages {
-        stage('Clone the sourcecode') {
-            steps {
-                echo 'Already configured'
-            }
-        }
+  maven 'mvn3'
+  }
 		
-		stage('Build the sourcecode using maven') {
-            steps {
-                echo 'Build the sourcecode using maven'
-				sh 'mvn clean package'
-            }
-        }
-		
-		stage('Create the image') {
-            steps {
-                echo 'Create the image'
-				sh "docker build . -t pipeline {
-    agent any
-	tools {
-		maven 'mvn3'
-	}
-
-
-    stages {
+stages {
         stage('Clone the sourcecode') {
             steps {
                 echo 'Already configured'
@@ -52,28 +27,7 @@ pipeline {
 		
 		stage('Push the image to the docker registry') {
             steps {
-                withCredentials([string(credentialsId: 'docker_pwd', variable: 'dockerpassword')]) {
-					echo 'Push the image to the docker registry'
-					sh "docker login -u amiyaranjansahoo -p ${dockerpassword}"
-					sh "docker push gayathri7977/docker-cloud:${BUILD_NUMBER}"
-				}
-            }
-        }
-		
-		stage('Create the container') {
-            steps {
-                echo 'Create the container'
-		    sh "docker rm -f mycontainer"		
-		    sh "docker run -d -p 9090:8080 --name mycontainer gayathri7977/docker-cloud:${BUILD_NUMBER}"
-            }
-        }
-    }:${BUILD_NUMBER}"
-            }
-        }
-		
-		stage('Push the image to the docker registry') {
-            steps {
-                withCredentials([string(credentialsId: 'docker_pwd', variable: 'dockerpassword')]) {
+               withCredentials([string(credentialsId: 'docker', variable: 'dockerpassword')]) {
 					echo 'Push the image to the docker registry'
 					sh "docker login -u gayathri7977 -p ${dockerpassword}"
 					sh "docker push gayathri7977/docker-cloud:${BUILD_NUMBER}"
@@ -89,3 +43,4 @@ pipeline {
             }
         }
     }
+}		
