--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,71 +1,46 @@
 pipeline {
     agent any
-
-    tools {
-        maven 'mvn3'
-    }
-
-    stages {
-        stage('Clone the Source Code') {
-            steps {
-                echo 'Skipping checkout – already configured externally.'
-            }
-        }
-
-        stage('Build with Maven') {
-            steps {
-                echo 'Running Maven build...'
-                sh '''
-                    set -xe
-                    mvn clean package
-                '''
-            }
-        }
-
-        stage('Build Docker Image') {
-            steps {
-                echo "Building Docker image with tag: ${BUILD_NUMBER}"
-                sh '''
-                    set -xe
-                    docker build -t gayathri7977/docker-cloud:${BUILD_NUMBER} .
-                '''
-            }
-        }
-
-        stage('Push to Docker Hub') {
-            steps {
-                echo 'Pushing Docker image to Docker Hub...'
-                withCredentials([string(credentialsId: 'docker', variable: 'dockerpassword')]) {
-                    sh '''
-                        set -xe
-                        echo "${dockerpassword}" | docker login -u gayathri7977 --password-stdin
-                        docker push gayathri7977/docker-cloud:${BUILD_NUMBER}
-                    '''
-                }
-            }
-        }
-
-        stage('Run Docker Container') {
-            steps {
-                echo 'Starting new Docker container...'
-                sh '''
-                    set -xe
-                    docker rm -f mycontainer || true
-                    docker run -d -p 9090:8080 --name mycontainer gayathri7977/docker-cloud:${BUILD_NUMBER}
-                '''
-            }
-        }
-    }
-
-    post {
-        success {
-            echo "✅ Pipeline executed successfully!"
-        }
-        failure {
-            echo "❌ Pipeline failed. Check the previous logs for the error."
-        }
-    }
-}
-
+	tools {
+  maven 'mvn3'
+  }
 		
+stages {
+        stage('Clone the sourcecode') {
+            steps {
+                echo 'Already configured'
+            }
+        }
 		
+		stage('Build the sourcecode using maven') {
+            steps {
+                echo 'Build the sourcecode using maven'
+				sh 'mvn clean package'
+            }
+        }
+		
+		stage('Create the image') {
+            steps {
+                echo 'Create the image'
+				sh "docker build . -t gayathri7977/docker-cloud:${BUILD_NUMBER}"
+            }
+        }
+		
+		stage('Push the image to the docker registry') {
+            steps {
+               withCredentials([string(credentialsId: 'docker', variable: 'dockerpassword')]) {
+					echo 'Push the image to the docker registry'
+					sh "docker login -u gayathri7977 -p ${dockerpassword}"
+					sh "docker push gayathri7977/docker-cloud:${BUILD_NUMBER}"
+				}
+            }
+        }
+		
+		stage('Create the container') {
+            steps {
+                echo 'Create the container'
+		    sh "docker rm -f mycontainer"		
+		    sh "docker run -d -p 9090:8080 --name mycontainer gayathri7977/docker-cloud:${BUILD_NUMBER}"
+            }
+        }
+    }
+}		
